# vkey

./: .gitignore  AGENTS.md  CHANGELOG.md  DICTIONARY_UPDATE.md  LICENSE-DATA.md  README.md  RELEASE.md  app-arch.md  appcast.xml  lexicon-update.json  vkey.xctestplan
.cursor/rules/: project-memory.mdc
Design/: README.md  SKILL.md  colors_and_type.css  components.css
Design/preview/: badges.html  brand-app-icons.html  brand-logo.html  brand-menubar.html  buttons.html  callouts.html  colors-accent.html  colors-brand.html  colors-ink.html  colors-paper.html  colors-semantic.html  hud.html  icons-flags.html  icons-keyboard.html  icons-overview.html  inputs.html  keycaps.html  radii.html  (+10 more)
Design2/: colors_and_type.css
Design3/: app-icons.jsx  huds.jsx  icons.jsx  index.html  menubar.jsx  settings.jsx  specimens.jsx  theme.css
Design4/: app.jsx  index.html
Tools/: ExportOptions-upload.plist  add_files_to_xcode.rb  audit_lexicon.py  build_lexicon.py  build_underthesea_package.py  capture_marketing.sh  export_sf_symbols.swift  generate_assets.swift  merge_underthesea_deep.py  sparkle_sign_update.sh  validate_appcast.sh
lexicon/: lexicon-update.json
rust-core/: .gitignore  Cargo.toml  README.md  build.sh  cbindgen.toml
rust-core/src/: lib.rs  state.rs
video/: package-lock.json  package.json
vkey/: ContentView.swift  Info.plist  vkey-Bridging-Header.h  vkey.entitlements  vkeyApp.swift
vkey.xcodeproj/: project.pbxproj
vkeyTests/: testBugs.swift  vkeyTests.swift
vkeyUITests/: vkeyUITests.swift  vkeyUITestsLaunchTests.swift
web/: download.html  index.html
(+141 files in other folders)
